--- a/pages/goods_detail/goods_detail.wxss
+++ b/pages/goods_detail/goods_detail.wxss
@@ -471,6 +471,12 @@ overflow:hidden;
   color: #fff;
 }
 
+.no-click{
+  background-color: #868686;
+  color: #6B6B6B;
+  pointer-events: none;
+}
+
 .comment_name{
   display: inline-block;
 }
