--- a/custom-tab-bar/index.wxml
+++ b/custom-tab-bar/index.wxml
@@ -1,18 +1,27 @@
-<!--miniprogram/custom-tab-bar/index.wxml-->
+<!-- miniprogram/custom-tab-bar/index.wxml -->
 <cover-view class="tab-bar">
   <cover-view class="tab-bar-border"></cover-view>
-
   <!-- <cover-view wx:for="{{list.data}}" wx:key="index" class="tab-bar-item" data-path="{{item.linkurl}}" data-index="{{index}}" bindtap="switchTab">
     <cover-image src="{{item.change ? item.imgurl2 : item.imgurl}}"></cover-image>
     <cover-view style="font-size:{{list.style.textfont}}px;padding:{{list.style.paddingleft}}px 0;color:{{item.change? list.style.textcoloron : list.style.textcolor}};">
         {{item.text}}
     </cover-view>
   </cover-view> -->
-
-  <cover-view wx:for="{{editionId==1?tabBarArr2:tabBarArr}}" wx:key="{{index}}" class="tab-bar-item" data-index="{{index}}" data-path="{{item.path}}" bindtap="switchTab">
-    <cover-image src="{{index == checked ? item.img2 : item.img}}"></cover-image>
-    <cover-view style="color: {{index == checked ? item.colorOn : item.color}}">
-      {{item.text}}
+  
+  <block wx:if="{{uniacid == 391}}">
+    <cover-view wx:for="{{editionId==1?tabBarArr2:tabBarArr}}" wx:key="{{index}}" class="tab-bar-item" data-index="{{index}}" data-path="{{item.path}}" bindtap="switchTab" wx:if="{{index == 0 || index == 2}}">
+      <cover-image src="{{index == checked ? item.img2 : item.img}}"></cover-image>
+      <cover-view style="color: {{index == checked ? item.colorOn : item.color}}">
+        {{item.text}}
+      </cover-view>
     </cover-view>
-  </cover-view>
+  </block>
+  <block wx:if="{{uniacid != 391}}">
+    <cover-view wx:for="{{editionId==1?tabBarArr2:tabBarArr}}" wx:key="{{index}}" class="tab-bar-item" data-index="{{index}}" data-path="{{item.path}}" bindtap="switchTab">
+      <cover-image src="{{index == checked ? item.img2 : item.img}}"></cover-image>
+      <cover-view style="color: {{index == checked ? item.colorOn : item.color}}">
+        {{item.text}}
+      </cover-view>
+    </cover-view>
+  </block>
 </cover-view>
