--- a/pages/ldm/index.wxml
+++ b/pages/ldm/index.wxml
@@ -1,3 +1,3 @@
 <!--pages/ldm/index.wxml-->
-<web-view  src='https://www.zhihuichacang.com/xeixin/index.html'></web-view>
+<web-view  src='{{url}}'></web-view>
 <!-- <web-view  src='http://teahouse.com/xeixin/index.html' onMessage="onmessage"></web-view> -->
